# cerebralmcp

./: .gitignore  pyproject.toml  requirements.txt  run.sh
config/: .env.example  mcp.json
src/api/: main.py  voice_ws.py
src/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/components/: ChatInterface.tsx  ClinicalReportView.tsx  CompletionScreen.tsx  Header.tsx  InterviewProgress.tsx  LiveHPIReport.tsx  PatientIngest.tsx  PatientSummaryPanel.tsx  VoiceInput.tsx
src/frontend/lib/: api.ts  i18n.ts  types.ts
src/mcp/: __main__.py  server.py
src/voice/: agent.py
