[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebralmcp"
version = "1.0.0"
description = "MCP server + pre-visit AI assistant for Acıbadem Cerebral Plus EHR"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "anthropic>=0.49.0",
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120
target-version = "py310"
